1.7.0 - 2017-XX-XX
  1. Wire HTTP transport settings into Credential logic.

  2. Fixed an issue where JSON auth files containing user auth e.g.
     Application default credentials does not work with
     google.cloud.auth.service.account.json.keyfile

1.6.1 - 2017-04-14

  1. Added a polling loop when determining if a createEmptyObjects error can
     safely be ignored and expanded the cases in which we will attempt to
     determine if an empty object already exists.

     Previously, if a rate limiting exception was encountered while creating
     empty objects the connector would issue a single get request for that
     object. If the object exists and is zero length we would consider the
     createEmptyObjects call successful and suppress the rate limit exception.

     The new implementation will poll for the existence of the object, up to
     a user-configurable maximum, and will poll when either a rate limiting
     error occurs or when a 500-level error occurs. The maximum can be
     configured by the following setting:

     fs.gs.max.wait.for.empty.object.creation.ms

     Any positive value for this setting will be interpreted to mean "poll
     for up to this many milliseconds before making a final determination".
     The default value will cause a maximum wait of 3 seconds. Polling can
     be disabled by setting this key to 0.


1.6.0 - 2016-12-16

  1. Added new PerformanceCachingGoogleCloudStorage; unlike the existing
     CacheSupplementedGoogleCloudStorage which only serves as an advisory
     cache for enforcement of list consistency, the new optional caching
     layer is able to serving certain metadata and listing requests purely
     out of a short-lived in-memory cache to enhance performance of
     some workloads. By default this feature is disabled, and can be
     controlled with the config settings:

       fs.gs.performance.cache.enable=true (default=false)
       fs.gs.performance.cache.list.caching.enable=true (default=false)
